--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,17 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.2.4.RELEASE (2015-10-14)
+---------------------------------------------
+* DATACOUCH-167 - Release 1.2.4 (Evans).
+
+
+Changes in version 1.4.0.RELEASE (2015-09-01)
+---------------------------------------------
+* DATACOUCH-160 - Release 1.4 GA (Gosling).
+* DATACOUCH-159 - Response time degradation on document conversion with a lot of longs inside.
+
+
 Changes in version 2.0.0.M2 (2015-08-04)
 ----------------------------------------
 * DATACOUCH-134 - Support Bucket Shadowing.
