DATACOUCH-170 - Fix N1QL annotation and inline querying in docs
In some places in the doc (javadoc, README, asciidoc), the annotation was still referred to as N1QL instead of Query...

Improved doc on inline statement for N1QL queries allowing the use of positional `$1` placeholders.

--- a/src/main/asciidoc/migrating.adoc
+++ b/src/main/asciidoc/migrating.adoc
@@ -21,8 +21,8 @@ The view-backed query method has evolved and support for N1QL has been introduce
 
  * Simple View query (to return all elements emitted by a view) - @View annotated without `viewName`
  * Intermediate View query by query derivation (to provide some criteria for the view) @View annotated with `viewName`
- * N1QL with explicit statements inline - @N1QL annotated with value
- * N1QL query derivation - @N1QL annotated without value / no annotation (default)
+ * N1QL with explicit statements inline - `@Query` annotated with value
+ * N1QL query derivation - `@Query` annotated without value / no annotation (default)
 
 View backed queries are associated with the `@View` annotation, while N1QL backed queries are associated with the `@Query` annotation.
 
