DATACOUCH-169 - Automatic index creation
Main indexes (ie indexes that can be used by repositories to retrieve ALL the documents of a particular entity type) are covered.

Repository interfaces can be annotated with an annotation for each type of main index that can be automatically created.

The IndexManager is responsible for creating said indexes (potentially skipping creation if an index is already in place, or if the IndexManager has been configured to skip it, see constructor).
Since IndexManager is created as a bean (either in JavaConfig or xml), there can be a different instance eg. in Prod vs Dev.

Added doc and integration test.

Renamed package core.view to core.query since it now contains various non-view related annotations and classes.

--- a/src/main/asciidoc/repository.adoc
+++ b/src/main/asciidoc/repository.adoc
@@ -9,7 +9,10 @@ There are three backing mechanisms in Couchbase for repositories, described in t
  - <<couchbase.repository.views.querying>>
  - <<couchbase.repository.spatial>>
 
-Note that you can tune the consistency you want for your queries (see <<couchbase.repository.consistency>>).
+CRUD operations are still mostly backed by Couchbase views (see <<couchbase.repository.views>>).
+Such views (and, for N1QL, equivalent indexes) can be automatically built, but note this is an **expensive operation** (see <<couchbase.repository.indexing>>).
+
+Note that you can tune the consistency you want for your queries (see <<couchbase.repository.consistency>>) and have different repositories backed by different buckets (see <<couchbase.repository.multibucket>>)
 
 [[couchbase.repository.configuration]]
 == Configuration
@@ -228,6 +231,19 @@ Note that the important part in this map function is to only include the documen
 
 Also make sure to publish your design documents into production so that they can be picked up by the library! Also, if you are curious why we use `emit(null, null)` in the view: the document id is always sent over to the client implicitly, so we can shave off a view bytes in our view by not duplicating the id. If you use `emit(meta.id, null)` it won't hurt much too.
 
+[[couchbase.repository.indexing]]
+== Automatic Index Management
+We've seen that the repositories default methods can be backed by two broad kind of features: views and N1QL (in the case of paging and sorting).
+In order for the CRUD operations to work, the adequate view must have been created beforehand, and this is usually left for the user to do because view creation (and index creation) is an expensive operation that can take quite some time if the quantity of documents is high.
+
+In the case where the index creation cost isn't considered too high, it can be triggered automatically instead. You just need to annotate the repositories you want managed with the relevant annotation(s):
+
+ - `@ViewIndexed` will create a view like the "all" view previously seen, to list all entities in the bucket. It can also be used on methods, allowing multiple views to be created with custom map function and reduce function.
+ - `@N1qlPrimaryIndexed` can be used to ensure a general-purpose PRIMARY INDEX is available in N1QL.
+ - `@N1qlSecondaryIndexed` will create a more specific N1QL index that does the same kind of filtering on entity type that the view does. It'll allow for efficient listing of all documents that correspond to a Repository's associated domain object.
+
+Note that sometimes you only want this automatic creation in certain contexts (eg. in Dev but not in Production). To that end, you can customize the `IndexManager` bean in an env-specific `AbstractCouchbaseConfiguration` (eg. via `@Profile`) to ignore certain types of index creation annotations. This is done through the `IndexManager(boolean ignoreView, boolean ignoreN1qlPrimary, boolean ignoreN1qlSecondary)` constructor. You can even declare multiple beans and differentiate them using Spring annotations.
+
 [[couchbase.repository.views.querying]]
 === View based querying
 
@@ -435,7 +451,6 @@ Provide the implementation and directly use `queryView` and `queryN1QL` methods 
  - one can specify the consistency on those via their respective query classes, according to the Couchbase Java SDK documentation.
  - for example for views `ViewQuery.stale(Stale.FALSE)`
  - for example for N1QL `Query.simple("SELECT * FROM default", QueryParams.build().consistency(ScanConsistency.REQUEST_PLUS));`
-
 
 [[couchbase.repository.multibucket]]
 == Working with multiple buckets
