--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.4.1.RELEASE (2015-11-15)
+---------------------------------------------
+* DATACOUCH-175 - Release 1.4.1 (Gosling).
+
+
 Changes in version 1.2.4.RELEASE (2015-10-14)
 ---------------------------------------------
 * DATACOUCH-167 - Release 1.2.4 (Evans).
