--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.4.2.RELEASE (2015-12-18)
+---------------------------------------------
+* DATACOUCH-182 - Release 1.4.2 (Gosling).
+
+
 Changes in version 1.4.1.RELEASE (2015-11-15)
 ---------------------------------------------
 * DATACOUCH-175 - Release 1.4.1 (Gosling).
